Junimo divs no longer have hover effect on smaller screens, to avoid clipping/functionality issue. Still need to fix the rules junimo, since I defined the hover effect for that completely differently for some reason instead of just using the function I had already made.

--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ h3{
     display:flex;
     flex-direction: column;
     align-items: center;
-    /* padding: 10px; */
     align-content: center;
     max-height: 800px;
 }
@@ -50,8 +49,6 @@ h3{
 }
 
 #difficulty-selection {
-    /* padding: 50px;
-    margin: 50px; */
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -74,7 +71,6 @@ h3{
     text-align: center;
     display: flex;
     flex-direction: column;
-    /* margin: 10px; */
     text-align: center;
     justify-content: center;
     align-items:center;
@@ -192,8 +188,6 @@ background-image: url('images/prairie-icon.png')
     min-width: 200px;
     max-height: 300px;
     align-self: center;
-    /* margin: 10px; */
-    
 }
 
 #rules {
@@ -201,11 +195,9 @@ background-image: url('images/prairie-icon.png')
     background-size: 150px;
     text-align: center;
     display: flex;
-    /* flex-wrap: wrap; */
     align-items:center;
     justify-content: center;
     font-size: 2em;
-    /* overflow-wrap: break-word; */
     font-family: 'Permanent Marker', serif;
     color: black;
     width: 200px;
@@ -213,7 +205,6 @@ background-image: url('images/prairie-icon.png')
     background-position: center;
     background-repeat: no-repeat;
     background-size: 150px;
-    /* padding: 0px 0px 0px 20px; */
 }
 
 #rules-description{
@@ -223,14 +214,12 @@ background-image: url('images/prairie-icon.png')
 
 .container-vert {
     display: flex;
-    /* flex-direction: column; */
     font-size: 1.2em;
     text-align: center;
     align-items: center;
     justify-content: center;
     align-self: center;
     flex-direction: row;
-    /* padding: 20px 0px 0px 0px; */
 }
 
 button {
@@ -247,7 +236,6 @@ button {
     font-family: 'Permanent Marker', serif;
     font-size: 1.5em;
     text-align: center;
-    /* margin: 0px 10px 0px 10px; */
 }
 
 button:hover{
@@ -270,7 +258,6 @@ button:hover{
     width: 100px;
     height: 100px;
     font-size: 4em;
-    /* padding: 5px; */
     border: 5px solid white;
     border-radius: 50%;
     text-align: center;
@@ -283,7 +270,7 @@ button:hover{
     display: none;
     flex-direction: row;
     justify-content: center;
-align-items: center;
+    align-items: center;
 }
 
 @media (max-width:475px) and (max-height: 1220px){
@@ -303,6 +290,9 @@ align-items: center;
     font-family: 'Permanent Marker', cursive;
     color: black;
 }
+/* .difficulty-junimo:hover{
+    transform:translateY(0px);
+} */
 #rules {
     background-image: url('images/blue-junimo.png');
     background-size: 100px;
